--- a/src/js/_info.html
+++ b/src/js/_info.html
@@ -1,3 +1,5 @@
+<div class="image"><img src="./assets/<%= data.Image %>"></div>
+
 <div class="title"><%= data.Title %></div>
 
 <div class="text"><%= data.Text %></div>
