--- a/src/index.html
+++ b/src/index.html
@@ -16,21 +16,21 @@
           <div class="info">
             <h1>Headline</h1>
             <h2>deck</h2>
-            <p>"You’ve seen the logos, numbers and colors.
-            <p>Now here’s the context.
-            <p>Prior to Washington’s public unveiling of its new Adidas football uniforms on Wednesday, Todd Rolak — Adidas’ Senior Design Director of US Sports — agreed to an email interview explaining the thought process behind many of the design decisions.
+            <p>"You’ve seen the logos, numbers and colors.</p>
+            <p>Now here’s the context.</p>
+            <p>Prior to Washington’s public unveiling of its new Adidas football uniforms on Wednesday, Todd Rolak — Adidas’ Senior Design Director of US Sports — agreed to an email interview explaining the thought process behind many of the design decisions.</p>
             
-            <p class="note"> <i class="fa fa-plus-circle"></i> Click on any icon to read Rolak’s perspective on the Huskies’ new threads.
+            <p class="note"> <i class="fa fa-plus-circle"></i> Click on any icon to read Rolak’s perspective on the Huskies’ new threads.</p>
           </div>
 
           <div class="image">
-            <img class="background" src="./assets/airport_illo_revised.jpg">
-            <div class="overlay"><%= t.include("./assets/airport.svg") %></div>
+            <img class="background" src="./assets/UWbackground.jpg">
+            <div class="overlay"><%= t.include("./assets/UWbackground.svg") %></div>
           </div>
 
         </div>
 
-        <div class="credits">GABRIEL CAMPANARIO and AUDREY CARLSEN / THE SEATTLE TIMES</div>
+        <div class="credits">PHOTOS COURTESY OF UNIVERSITY OF WASHINGTON</div>
       </div>
     </responsive-child>
 
