--- a/src/index.html
+++ b/src/index.html
@@ -14,13 +14,13 @@
       <div class="outer">
         <div class="flex-container">
           <div class="info">
-            <h1>Headline</h1>
-            <h2>deck</h2>
-            <p>"You’ve seen the logos, numbers and colors.</p>
+            <h1>A deeper look</h1>
+            <p class="note"> <i class="fa fa-plus-circle"></i> Click on any icon to read Rolak’s perspective on the Huskies’ new threads.</p>
+            <p>You’ve seen the logos, numbers and colors.</p>
             <p>Now here’s the context.</p>
             <p>Prior to Washington’s public unveiling of its new Adidas football uniforms on Wednesday, Todd Rolak — Adidas’ Senior Design Director of US Sports — agreed to an email interview explaining the thought process behind many of the design decisions.</p>
             
-            <p class="note"> <i class="fa fa-plus-circle"></i> Click on any icon to read Rolak’s perspective on the Huskies’ new threads.</p>
+            <div class="credits">PHOTOS COURTESY OF UNIVERSITY OF WASHINGTON</div>
           </div>
 
           <div class="image">
@@ -30,7 +30,7 @@
 
         </div>
 
-        <div class="credits">PHOTOS COURTESY OF UNIVERSITY OF WASHINGTON</div>
+        
       </div>
     </responsive-child>
 
