--- a/src/js/_info.html
+++ b/src/js/_info.html
@@ -1,4 +1,4 @@
-<div class="image"><img src="./assets/<%= data.Image %>"></div>
+<img src="./assets/<%= data.Image %>">
 
 <div class="title"><%= data.Title %></div>
 
